# portfolio

./: Cargo.toml  Trunk.toml  index.html  netlify.toml  package.json  pnpm-lock.yaml
src/: content.rs  lib.rs  main.rs
src/components/: icons.rs  mod.rs
src/components/sections/: hero.rs  mod.rs  projects.rs  skills.rs  timeline.rs  top_nav.rs
src/components/ui/: primitives.rs
src/pages/: home.rs
style/: tailwind.css
