[package]
name = "portfolio"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
tw_merge = { version = "0.1.17", features = ["variant"] }
icons = { version = "0.18.0", features = ["leptos"] }
leptos_ui = "0.3.20"
leptos_icons = "0.7"
icondata = "0.7"
web-sys = { version = "0.3", features = ["Document", "Window", "Element", "DomRect"] }

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
tailwind-input-file = "style/tailwind.css"
